--- a/index.html
+++ b/index.html
@@ -59,4 +59,5 @@
   </div>
   <div style="width: 213px; height: 130px; left: 263px; top: 494.02px; position: absolute; transform: rotate(180deg); transform-origin: top left; background: white; box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.02); border-radius: 25px"></div>
   <div style="width: 211.28px; left: 50.86px; top: 374.02px; position: absolute; text-box-trim: trim-both; text-box-edge: cap alphabetic; text-align: center; justify-content: center; display: flex; flex-direction: column; color: #E75E07; font-size: 14px; font-family: Montserrat; font-weight: 700; text-transform: capitalize; line-height: 25px; letter-spacing: 0.40px; word-wrap: break-word">% Participação Receita</div>
+  <div style="left: 124.50px; top: 394.02px; position: absolute; text-box-trim: trim-both; text-box-edge: cap alphabetic; text-align: center; color: black; font-size: 10px; font-family: Montserrat; font-weight: 700; line-height: 25px; letter-spacing: 0.40px; word-wrap: break-word">(Ano Atual)</div>
 </div>
